# YaCoS

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  install_deps.sh  setup.py
cython_lbpeq/: setup.py
cython_lbpeq/src/: cython_lbpeq.c  cython_lbpeq.pyx
cython_rbp/: setup.py
cython_rbp/src/: cython_rbp.c  cython_rbp.pyx
examples/data_processing/: clustering.py
examples/model/: build_model.py  traverse_model.py
examples/others/: call_graph.py  (+15 more)
notebooks/: evaluate_sequences.ipynb  generate_random_sequences.ipynb  graph_clangdriver.ipynb  graph_llvmdriver.ipynb  mcoeff.ipynb
yacos/: __init__.py
yacos/info/compy/extractors/llvm_ir/: CMakeLists.txt  llvm_extractor.cc  llvm_extractor.h  llvm_extractor_test.cc  llvm_graph_funcinfo.cc  llvm_graph_funcinfo.h  llvm_graph_pass.cc  llvm_graph_pass.h  llvm_histogram_pass.cc  llvm_histogram_pass.h  llvm_insts_pass.cc  llvm_insts_pass.h  llvm_ir2vec_pass.cc  llvm_ir2vec_pass.h  llvm_loop_funcinfo.cc  llvm_loop_funcinfo.h  llvm_loop_pass.cc  llvm_loop_pass.h  llvm_msf_pass.cc  llvm_msf_pass.h  llvm_names_pass.cc  llvm_names_pass.h  llvm_opcodes_pass.cc  llvm_opcodes_pass.h  llvm_pass_test.cc  llvm_seq_pass.cc  llvm_seq_pass.h  llvm_wl_cost_funcinfo.cc  llvm_wl_cost_funcinfo.h  llvm_wl_cost_pass.cc  llvm_wl_cost_pass.h
yacos/info/compy/extractors/llvm_ir/wl_static_profiler/: CMakeLists.txt  LICENSE  block_edge_frequency_pass.cc  block_edge_frequency_pass.h  branch_heuristics_info.cc  branch_heuristics_info.h  branch_prediction_info.cc  branch_prediction_info.h  branch_prediction_pass.cc  branch_prediction_pass.h
(+171 files in other folders)
